# vkcompute

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: VmaImpl.cpp  main.cpp  vkrpch.h
src/shaders/: CMakeLists.txt  sum.comp
